added link in bio site

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "tailwind-watch": "npx tailwindcss -i input.css -o output.css --watch",
+    "tailwind-minify": "npx tailwindcss -i input.css -o output.css --minify"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.1.8"
   }
 }
