--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.1",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
-    "astro": "^2.7.0"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.7.1",
+    "astro-icon": "^0.8.1",
+    "boxicons": "^2.1.4",
+    "sharp": "^0.32.1",
+    "tailwindcss": "^3.3.2",
+    "three": "^0.154.0"
+  },
+  "devDependencies": {
+    "@astrojs/partytown": "^1.2.3",
+    "@astrolib/analytics": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
