fmt changes ikr

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
 		"configurations": [],
 		"compounds": []
     },
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "svg.preview.background": "transparent"
 }
