--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.7.1",
+    "astro": "2.7.1",
     "astro-icon": "^0.8.1",
     "boxicons": "^2.1.4",
     "sharp": "^0.32.1",
