--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "@astrojs/partytown": "1.2.3",
-    "@tailwindcss/typography": "0.5.9",
-    "astro-compress": "1.1.49"
+    "@tailwindcss/typography": "0.5.9"
   }
 }
