--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.17.1",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
-    "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.7.1",
+    "@astrojs/tailwind": "^5.0.2",
+    "astro": "3.6.4",
     "astro-icon": "^0.8.1",
     "boxicons": "^2.1.4",
     "sharp": "^0.32.1",
