--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/react": "^3.0.10",
-    "@astrojs/rss": "^2.4.3",
+    "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^4.0.0",
     "astro-icon": "^0.8.1",
     "boxicons": "^2.1.4",
+    "recharts": "^2.12.0",
     "sharp": "^0.32.1",
     "sql.js": "^1.10.2",
     "tailwindcss": "^3.3.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@astrojs/partytown": "1.2.3",
     "@tailwindcss/typography": "0.5.9",
-    "@types/sql.js": "^1.4.9"
+    "@types/sql.js": "^1.4.9",
+    "daisyui": "^4.7.0"
   }
 }
