--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,12 @@
 {
-    "cSpell.words": [
-      "redirectior",
-      "strikethrough"
-    ],
-    "editor.insertSpaces": true,
-	"editor.detectIndentation": false,
-	"launch": {
-		"configurations": [],
-		"compounds": []
-    },
-    "editor.tabSize": 2,
-    "svg.preview.background": "transparent",
-    "cSpell.enabled": true
+  "cSpell.words": ["redirectior", "strikethrough"],
+  "editor.insertSpaces": true,
+  "editor.detectIndentation": false,
+  "launch": {
+    "configurations": [],
+    "compounds": []
+  },
+  "editor.tabSize": 2,
+  "svg.preview.background": "transparent",
+  "cSpell.enabled": true
 }
